--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -88,7 +88,7 @@
 <body>
   <div class="container">
     <header class="hero">
-      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida" loading="lazy" style="width:120px;height:auto;display:block;margin-bottom:10px">
+      <img class="logo" src="assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida" loading="lazy" style="width:120px;height:auto;display:block;margin-bottom:10px">
       <span class="badge">🎉 Gâteau Gender Reveal</span>
       <h1>Une révélation pleine d’émotion</h1>
       <p class="lead">
