--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -135,7 +135,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="images/logo.jpg" alt="Logo Les Pâtisseries de Lida" class="logo">
+      <img src="assets/galerie/numbercakes/numbercake.png" alt="Logo Les Pâtisseries de Lida" class="logo">
       <h1>Les Pâtisseries de Lida</h1>
       <div class="badge">Number Cakes</div>
     </header>
