--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -140,7 +140,7 @@
 
       <div>
         <div class="media">
-          <img src="assets/galerie/gender-reveal/gr1.jpg" alt="Gâteau Gender Reveal rose et bleu" loading="lazy">
+          <img src="assets/galerie/gender-reveal/gender1.png" alt="Gâteau Gender Reveal rose et bleu" loading="lazy">
         </div>
         <div style="margin-top:12px">
           <span class="pill">Rose ou Bleu</span>
