--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -89,7 +89,7 @@
     <!-- Header -->
     <header class="hero">
       <!-- مسیر لوگو را به فایل خودت تغییر بده -->
-      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
       <div class="badge">Gâteau Gender Reveal</div>
     </header>
@@ -141,7 +141,7 @@
       <h2>Quelques réalisations</h2>
       <div class="gallery">
         <!-- مسیرها را با گالری خودت هماهنگ کن -->
-        <img src="assets/galerie/gender-reveal/1.jpg" alt="Gender Reveal Cake 1">
+        <img src="assets/galerie/gender-reveal/gr1.jpg" alt="Gender Reveal Cake 1">
         <img src="assets/galerie/gender-reveal/2.jpg" alt="Gender Reveal Cake 2">
         <img src="assets/galerie/gender-reveal/3.jpg" alt="Gender Reveal Cake 3">
       </div>
