--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -158,7 +158,7 @@
           <!-- تصویر نمونهٔ اصلی -->
           <div class="media">
             <!-- مسیر را با عکس خودت عوض کن -->
-            <img src="assets/galerie/gender-reveal/gr1.jpg" alt="Gâteau Gender Reveal rose et bleu" loading="lazy">
+            <img src="../../../assets/galerie/gender-reveal/gr1.jpg" alt="Gâteau Gender Reveal rose et bleu" loading="lazy">
           </div>
 
           <!-- کلمات کلیدی کوچک (اختیاری) -->
