--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -14,7 +14,7 @@
     
   <nav class="nav-buttons">
 
-  <a href="../../../index.html#galerie" class="btn">⟵ Retour</a>
+  <a href="../../../index.html" class="btn">⟵ Retour</a>
   <a href="#galerie" class="btn">Galerie</a>
   <a href="../../../index.html#contact" class="btn">Contact</a>
     </nav>
