--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -117,8 +117,8 @@
 
         
       <nav class="nav-buttons" aria-label="Navigation principale">
-        <a class="btn" href="index.html">Accueil</a>
-        <a class="btn" href="gallery.html">Galerie</a>
+        <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
         <a class="btn" href="contact.html">Contact</a>
       </nav>
     </header>
