--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -25,7 +25,7 @@
     html,body{margin:0;padding:0;background:var(--cream);color:var(--ink);font-family:Inter,system-ui,sans-serif;line-height:1.7}
     a{text-decoration:none;color:var(--accent);transition:.25s}
     a:hover{color:var(--hover)}
-    .wrap{max-width:980px;margin:0 auto;padding:24px}
+    .wrap{max-width:95%; margin:0 auto; padding:22px 10px;}
 
     /* هدر آبی نفتی با لوگو و برند */
     header.hero{
