--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -23,7 +23,7 @@
     html,body{margin:0;padding:0;background:var(--cream);color:var(--ink);font-family:Inter,system-ui,sans-serif;line-height:1.7}
     a{text-decoration:none;color:var(--accent);transition:.25s}
     a:hover{color:var(--hover)}
-    .wrap{max-width:95%;margin:0 auto;padding:20px 10px;}
+    .wrap{max-width:95%; margin:0 auto;padding:20px 10px;}
 
     /* Header navy با لوگو و عنوان دست‌نویس */
     header.hero{
@@ -77,6 +77,13 @@
       <img class="logo" src="assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
       <div class="badge">Number Cakes</div>
+
+      <nav class="nav-buttons" aria-label="Navigation principale">
+        <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
+        <a class="btn" href="contact.html">Contact</a>
+      </nav>
+      
     </header>
 
     <!-- Content -->
