--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -74,9 +74,9 @@
     <!-- Header -->
     <header class="hero">
       <!-- مسیر لوگوی خودت را اینجا بگذار -->
-      <img class="logo" src="assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../../assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
-      <div class="badge">Number Cakes</div>
+      
 
       <nav class="nav-buttons" aria-label="Navigation principale">
         <a class="btn" href="../../../index.html">Accueil</a>
@@ -89,6 +89,8 @@
     <!-- Content -->
     <main class="card" role="main">
       <p class="lead">
+
+        <div class="badge">Number Cakes</div>
         Hyper tendance, nos Number Cakes se déclinent sous différentes formes&nbsp;:
         <strong>chiffres, lettres, cercle, cœur</strong>, ou toute autre forme selon vos envies.
       </p>
